--- a/conversor/src/main/java/main/view/ViewMain.fxml
+++ b/conversor/src/main/java/main/view/ViewMain.fxml
@@ -16,7 +16,6 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <TextField fx:id="txtMonto1" layoutX="124.0" layoutY="282.0" onKeyTyped="#txtMonto1InputTextChanged" prefHeight="54.0" prefWidth="232.0" />
                   <TableView fx:id="tvDe" editable="true" layoutX="14.0" layoutY="113.0" onMouseClicked="#onMouseClickedDivisaOrigen" prefHeight="141.0" prefWidth="360.0" scaleShape="false">
                     <columns>
                       <TableColumn fx:id="isoColum1" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" resizable="false" text="ISO_" />
@@ -25,7 +24,7 @@
                         <TableColumn fx:id="banderaColumn1" maxWidth="1.0" minWidth="1.0" prefWidth="1.0" resizable="false" text="Bandera1" visible="false" />
                     </columns>
                   </TableView>
-                  <TableView fx:id="tvA" layoutX="418.0" layoutY="112.0" prefHeight="143.0" prefWidth="360.0" scaleShape="false">
+                  <TableView fx:id="tvA" layoutX="418.0" layoutY="112.0" onMouseClicked="#onMouseClickedDivisaDestino" prefHeight="143.0" prefWidth="360.0" scaleShape="false">
                     <columns>
                       <TableColumn fx:id="isoColum2" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" resizable="false" text="_ISO" />
                       <TableColumn fx:id="nombreColum2" maxWidth="280.0" minWidth="280.0" prefWidth="280.0" resizable="false" text="_NOMBRE" />
@@ -44,10 +43,8 @@
                      <font>
                         <Font name="Arial Black" size="24.0" />
                      </font></Label>
-                  <Button fx:id="btnCrossover" layoutX="703.0" layoutY="279.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="52.0" text="Button" />
-                  <Button fx:id="btnCalcular" layoutX="32.0" layoutY="283.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="70.0" text="Button" />
                   <ImageView fx:id="imgBandera1" fitHeight="53.0" fitWidth="106.0" layoutX="14.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fx:id="imgBandera2" fitHeight="53.0" fitWidth="106.0" layoutX="637.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgBandera2" fitHeight="53.0" fitWidth="106.0" layoutX="672.0" layoutY="46.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true" />
                   <Label fx:id="lblDe1" alignment="CENTER_RIGHT" layoutX="137.0" layoutY="65.0" prefHeight="46.0" prefWidth="237.0" text="Label">
                      <font>
                         <Font name="Arial Black" size="16.0" />
@@ -58,7 +55,14 @@
                         <Font name="Arial Black" size="16.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txtMonto2" layoutX="418.0" layoutY="282.0" onInputMethodTextChanged="#txtMonto2InputTextChanged" prefHeight="54.0" prefWidth="232.0" />
+                  <TextField fx:id="txtMonto1" layoutX="124.0" layoutY="282.0" onKeyTyped="#txtMonto1InputTextChanged" prefHeight="54.0" prefWidth="250.0">
+                     <font>
+                        <Font name="Arial Bold Italic" size="24.0" />
+                     </font></TextField>
+                  <TextField fx:id="txtMonto2" layoutX="418.0" layoutY="282.0" onKeyPressed="#txtMonto2InputTextChanged" onKeyTyped="#txtMonto2InputTextChanged" prefHeight="54.0" prefWidth="232.0">
+                     <font>
+                        <Font name="Arial Bold Italic" size="24.0" />
+                     </font></TextField>
                   <Label fx:id="lblDe2" layoutX="384.0" layoutY="19.0" prefHeight="46.0" prefWidth="27.0" text="=" textAlignment="CENTER">
                      <font>
                         <Font name="Arial Black" size="36.0" />
