--- a/conversor/src/main/java/main/view/ViewCambio.fxml
+++ b/conversor/src/main/java/main/view/ViewCambio.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane minWidth="-Infinity" prefHeight="722.0" prefWidth="976.0" style="-fx-border-style: solid;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ViewCambioController">
    <children>
-      <AnchorPane layoutX="17.0" layoutY="16.0" prefHeight="302.0" prefWidth="942.0" style="-fx-border-style: solid; -fx-border-color: orange;" AnchorPane.bottomAnchor="405.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="15.0">
+      <AnchorPane layoutX="17.0" layoutY="16.0" prefHeight="302.0" prefWidth="942.0" AnchorPane.bottomAnchor="405.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="15.0">
          <children>
             <Label layoutX="21.0" layoutY="14.0" text="Divisa Origen" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -59,7 +59,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="12.0" layoutY="329.0" prefHeight="376.0" prefWidth="950.0" style="-fx-border-style: solid; -fx-border-color: brown;">
+      <AnchorPane layoutX="12.0" layoutY="329.0" prefHeight="376.0" prefWidth="950.0">
          <children>
             <TableView fx:id="tvTipoCambio" layoutX="9.0" layoutY="12.0" prefHeight="356.0" prefWidth="935.0">
                <columns>
